--- a/pricing.html
+++ b/pricing.html
@@ -1,40 +1,40 @@
 ---
 title: Pricing
-heading: Find the perfect plan for your business
-description: All plans include our award winning sales optimization solution to track your sales in real time.
+heading: Find the perfect plan for your server
+description: Find the perfect plan for your server
 pricing_table:
-  - name: Basic
+  - name: Grass
     color: "#8e8e8e"
     features:
-      - text: $25 per month
+      - text: $2 per month
         highlight: true
-      - text: Up to 5 users
+      - text: Ulimited Players
         highlight: false
-      - text: Basic lead scoring
+      - text: 1 Mod
         highlight: false
-      - text: CRM
+      - text: 8 GB off RAM
         highlight: false
-      - text: Basic reporting
+      - text: Basic Support
         highlight: false
-      - text: Sales map
+      - text: Spigot Server
         highlight: false
     call_to_action:
-      link: http://mysite.com?plan=basic
+      link: https://secure3.mcxleague.cf/buy/?=¨grass¨
       text: Get started
-  - name: Pro
+  - name: Iron
     color: "#4a4a4a"
     features:
-      - text: $99 per month
+      - text: $15 per month
         highlight: true
-      - text: Everything in Basic
+      - text: Everything in Grass
         highlight: false
-      - text: Up to 25 users
+      - text: 10 Mods
+        highlight: true
+      - text: Add to MCX league Server List
         highlight: false
-      - text: Advanced lead scoring
+      - text: Spigot, Fabric
         highlight: false
-      - text: Pipeline management
-        highlight: false
-      - text: Advanced reporting
+      - text: 16 GB RAM
         highlight: false
     call_to_action:
       link: http://mysite.com?plan=pro
