--- a/pricing.html
+++ b/pricing.html
@@ -18,6 +18,8 @@ pricing_table:
         highlight: false
       - text: Spigot Server
         highlight: false
+      - text: 2 Backups
+        highlight: false
     call_to_action:
       link: https://secure3.mcxleague.cf/buy/?=¨grass¨
       text: Get started
@@ -36,36 +38,38 @@ pricing_table:
         highlight: false
       - text: 16 GB RAM
         highlight: false
+      - text: 5 Backups
+        highlight: false
     call_to_action:
-      link: http://mysite.com?plan=pro
+      link: https://secure3.mcxleague.cf/buy/?=:
       text: Get started
-  - name: Professional
+  - name: Netherite Ingot
     color: "#000000"
     features:
-      - text: $299 per month
+      - text: $25 per month
         highlight: true
-      - text: Everything in Basic and Pro
+      - text: Everything in Grass and Iron
         highlight: false
-      - text: Up to 100 users
+      - text: Unlimited Mods
         highlight: false
-      - text: Campaign builder
+      - text: Spigot, Fabric, Bungee Cord*
         highlight: false
-      - text: Machine learning
+      - text: Host A Website
         highlight: false
-      - text: Calendar
+      - text: 32 GB RAM
+        highlight: false
+      - text: Unlimited Backups
         highlight: false
     call_to_action:
-      link: http://mysite.com?plan=professional
+      link: https://secure3.mcxleague.cf
       text: Get started
 faq:
   - question: What types of payment do you accept?
     answer: Credit cards including MasterCard, Visa or American Express.
   - question: Can I change my plan at a later time?
     answer: Yes, you can upgrade and downgrade your plan at anytime.
-  - question: Do you offer pricing for nonprofit organizations?
-    answer: Yes, send us a message and we'll set you up on our nonprofit pricing.
   - question: Questions?
-    answer: Contact us for any further questions at <a href="#">john@business.com</a>.
+    answer: Contact us for any further questions at <a href="#">support@mcxleague.cf</a>.
 ---
 <div class="plans">
 	{% for plan in page.pricing_table %}
