--- a/contact.html
+++ b/contact.html
@@ -1,20 +1,14 @@
 ---
 title: Contact
 heading: Get in touch today
-description: We'd love to help you improve your sales.
-
-map:
-  latitude: -45.8787605
-  longitude: 170.5027976
-  address: "1 George Street, Dunedin, New Zealand"
-  zoom: 13
+description: We would love to help you!
 ---
 <div class="map" id="map"></div>
 
 
 <div class="contact-box">
 	<form action="{{ site.baseurl }}/contact-success/" method="post" class="contact-form">
-		<input type="hidden" name="_to" value="support@example.com" />
+		<input type="hidden" name="_to" value="support@mcxleague.cf" />
 		<input type="text" name="_gotcha" style="display: none;">
 
 		<label for="name">Full Name</label>
