--- a/pricing.html
+++ b/pricing.html
@@ -1,7 +1,7 @@
 ---
 title: Pricing
 heading: Find the perfect plan for your server
-description: Find the perfect plan for your server
+description: Find the perfect plan for your server!
 pricing_table:
   - name: Grass
     color: "#8e8e8e"
@@ -62,6 +62,8 @@ faq:
     answer: Credit cards including MasterCard, Visa or American Express.
   - question: Can I change my plan at a later time?
     answer: Yes, you can upgrade and downgrade your plan at anytime.
+  - question: Questions?
+    answer: Contact us for any further questions at <a href="#">support@mcxleague.cf</a>.
   - question: Questions?
     answer: Contact us for any further questions at <a href="#">support@mcxleague.cf</a>.
 ---
