--- a/pricing.html
+++ b/pricing.html
@@ -1,71 +1,71 @@
 ---
 title: Pricing
-heading: Find the perfect plan for your server
-description: Find the perfect plan for your server!
+heading: Find the perfect plan for your business
+description: All plans include our award winning sales optimization solution to track your sales in real time.
 pricing_table:
-  - name: Grass
+  - name: Basic
     color: "#8e8e8e"
-    features:
-      - text: $2 per month
-        highlight: true
-      - text: Ulimited Players
-        highlight: false
-      - text: 1 Mod
-        highlight: false
-      - text: 8 GB off RAM
-        highlight: false
-      - text: Basic Support
-        highlight: false
-      - text: Spigot Server
-        highlight: false
-    call_to_action:
-      link: https://secure3.mcxleague.cf/buy/?=¨grass¨
-      text: Get started
-  - name: Iron
-    color: "#4a4a4a"
-    features:
-      - text: $15 per month
-        highlight: true
-      - text: Everything in Grass
-        highlight: false
-      - text: 10 Mods
-        highlight: true
-      - text: Add to MCX league Server List
-        highlight: false
-      - text: Spigot, Fabric
-        highlight: false
-      - text: 16 GB RAM
-        highlight: false
-    call_to_action:
-      link: https://secure3.mcxleague.cf/buy/?=:
-      text: Get started
-  - name: Netherite Ingot
-    color: "#000000"
     features:
       - text: $25 per month
         highlight: true
-      - text: Everything in Grass and Iron
+      - text: Up to 5 users
         highlight: false
-      - text: Unlimited Mods
+      - text: Basic lead scoring
         highlight: false
-      - text: Spigot, Fabric, Bungee Cord*
+      - text: CRM
         highlight: false
-      - text: Host A Website
+      - text: Basic reporting
         highlight: false
-      - text: 32 GB RAM
+      - text: Sales map
         highlight: false
     call_to_action:
-      link: https://secure3.mcxleague.cf
+      link: http://mysite.com?plan=basic
+      text: Get started
+  - name: Pro
+    color: "#4a4a4a"
+    features:
+      - text: $99 per month
+        highlight: true
+      - text: Everything in Basic
+        highlight: false
+      - text: Up to 25 users
+        highlight: false
+      - text: Advanced lead scoring
+        highlight: false
+      - text: Pipeline management
+        highlight: false
+      - text: Advanced reporting
+        highlight: false
+    call_to_action:
+      link: http://mysite.com?plan=pro
+      text: Get started
+  - name: Professional
+    color: "#000000"
+    features:
+      - text: $299 per month
+        highlight: true
+      - text: Everything in Basic and Pro
+        highlight: false
+      - text: Up to 100 users
+        highlight: false
+      - text: Campaign builder
+        highlight: false
+      - text: Machine learning
+        highlight: false
+      - text: Calendar
+        highlight: false
+    call_to_action:
+      link: http://mysite.com?plan=professional
       text: Get started
 faq:
   - question: What types of payment do you accept?
     answer: Credit cards including MasterCard, Visa or American Express.
   - question: Can I change my plan at a later time?
     answer: Yes, you can upgrade and downgrade your plan at anytime.
+  - question: Do you offer pricing for nonprofit organizations?
+    answer: Yes, send us a message and we'll set you up on our nonprofit pricing.
   - question: Questions?
-    answer: Contact us for any further questions at <a href="#">support@mcxleague.cf</a>.
-  - question: Questions?
-    answer: Contact us for any further questions at <a href="#">support@mcxleague.cf</a>.
+    answer: Contact us for any further questions at <a href="#">john@business.com</a>.
 ---
 <div class="plans">
 	{% for plan in page.pricing_table %}
