--- a/pricing.html
+++ b/pricing.html
@@ -3,56 +3,56 @@ title: Pricing
 heading: Find the perfect plan for your business
 description: All plans include our award winning sales optimization solution to track your sales in real time.
 pricing_table:
-  - name: Basic
+  - name: Grass
     color: "#8e8e8e"
     features:
-      - text: $25 per month
+      - text: $2 per month
         highlight: true
-      - text: Up to 5 users
+      - text: 2 GB Ram
         highlight: false
-      - text: Basic lead scoring
+      - text: Up to 2 Mods
         highlight: false
-      - text: CRM
+      - text: Unlimited Players
         highlight: false
-      - text: Basic reporting
+      - text: 1 GB of storage
         highlight: false
-      - text: Sales map
+      - text: 2 Backups
         highlight: false
     call_to_action:
-      link: http://mysite.com?plan=basic
+      link: http://store.mcxleague.cf/grass
       text: Get started
-  - name: Pro
+  - name: Diamond
     color: "#4a4a4a"
     features:
-      - text: $99 per month
+      - text: $10 per month
         highlight: true
-      - text: Everything in Basic
+      - text: Everything in Grass
         highlight: false
-      - text: Up to 25 users
+      - text: Up To 15 Mods
         highlight: false
-      - text: Advanced lead scoring
+      - text: 4 GB Ram
         highlight: false
-      - text: Pipeline management
+      - text: 5 GB Storage
         highlight: false
-      - text: Advanced reporting
+      - text: 5 Backups
         highlight: false
     call_to_action:
-      link: http://mysite.com?plan=pro
+      link: http://store.mcxleague.cf/diamond
       text: Get started
-  - name: Professional
+  - name: Netherite
     color: "#000000"
     features:
-      - text: $299 per month
+      - text: $20 per month
         highlight: true
-      - text: Everything in Basic and Pro
+      - text: Everything in Grass and Diamond
         highlight: false
-      - text: Up to 100 users
+      - text: Unlimited Mods
         highlight: false
-      - text: Campaign builder
+      - text: 16 GB Ram
         highlight: false
-      - text: Machine learning
+      - text: Unlimited Storage
         highlight: false
-      - text: Calendar
+      - text: Unlimited Backups
         highlight: false
     call_to_action:
       link: http://mysite.com?plan=professional
