--- a/pricing.html
+++ b/pricing.html
@@ -62,10 +62,10 @@ faq:
     answer: Credit cards including MasterCard, Visa or American Express.
   - question: Can I change my plan at a later time?
     answer: Yes, you can upgrade and downgrade your plan at anytime.
-  - question: Do you offer pricing for nonprofit organizations?
-    answer: Yes, send us a message and we'll set you up on our nonprofit pricing.
+  - question: Can we change our sever type after purchase?
+    answer: Yes, you can change your servers type. (etc: Spigot -> Vanilla)
   - question: Questions?
-    answer: Contact us for any further questions at <a href="#">john@business.com</a>.
+    answer: Contact us for any further questions at <a href="#">support@mcxleague.cf</a>.
 ---
 <div class="plans">
 	{% for plan in page.pricing_table %}
