--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ description: Host A Minecraft Server with ease.
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>Are they <strong>keep</strong> FAST?</h2>
+				<h2>Are they <strong></strong> FAST?</h2>
 				<p>Yes! MCX Leagueś Hosting server are SUPER Fast, if your looking for speed, you are at the right place!</p>
 			</div>
 			<div class="image">
