--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@ description: We would love to help you!
 		<address><a target="_blank" href="https://www.google.com/maps/place/{{ page.map.address | url_encode }}">{{ page.map.address | replace: ", ", ", <br>" }}</a></address>
 
 		<h3 class="editable">Email</h3>
-		<p><a href="mailto:support@example.com">support@example.com</a></p>
+		<p><a href="mailto:support@example.com">support@mcxleague.cf</a></p>
 	</div>
 </div>
 
