--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ description: Host A Minecraft Server with ease.
 		<div class="container flex">
 			<div class="text editable">
 				<h2>What about the <strong>Pannel?</strong></h2>
-				<p>Our pannel runs off of the powerfull MultiCraft 2 pannel. Giving you speed and a easy to manage server</p>
+				<p>Our pannel runs off of the powerfull Pyradactle pannel. Giving you speed and a easy to manage server</p>
 			</div>
 			<div class="image">
 				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
