--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ description: Host A Minecraft Server with ease.
 	<div class="text-container">
 		<h1 class="editable">Host your Minecraft Server <strong>Today</strong></h1>
 		<p class="subtext editable">We make it easy and cost effective to host your Minecraft servers.</p>
-		<div class="cta button alt"><a href="{{ site.baseurl }}/contact/">Hosting Options</a></div>
+		<div class="cta button alt"><a href="{{ site.baseurl }}/pricing/">Hosting Options</a></div>
 		<div>
 			<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
 		</div>
