--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@ description: Host A Minecraft Server with ease.
 
 	<section class="bottom-cta">
 		<h2 class="editable"><strong>Host</strong> your Minecraft server today</h2>
-		<div class="button alt"><a href="#">View Plans</a></div>
+		<div class="button alt"><a href="https://hosting.mcxleague.cf/pricing/">View Plans</a></div>
 	</section>
 </div>
