--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ description: Host A Minecraft Server with ease.
 	<div class="text-container">
 		<h1 class="editable">Host your Minecraft Server <strong>Today</strong></h1>
 		<p class="subtext editable">We make it easy and cost effective to host your Minecraft servers.</p>
-		<div class="cta button alt"><a href="{{ site.baseurl }}/pricing/">Hosting Options</a></div>
+		<div class="cta button alt"><a href="{{ site.baseurl }}/pricing/">Hosting Plans</a></div>
 		<div>
 			<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
 		</div>
@@ -52,6 +52,6 @@ description: Host A Minecraft Server with ease.
 
 	<section class="bottom-cta">
 		<h2 class="editable"><strong>Host</strong> your Minecraft server today</h2>
-		<div class="button alt"><a href="https://hosting.mcxleague.cf/pricing/">View Plans</a></div>
+		<div class="button alt"><a href="https://hosting.mcxleague.cf/pricing/">Hosting Plans</a></div>
 	</section>
 </div>
